--- a/public/app/login/login.html
+++ b/public/app/login/login.html
@@ -1,9 +1,8 @@
-<div class="signup">
+<div class="login">
 	<div class="row ">
-		<div class="medium-5 column medium-centered">
+		<div class="medium-4 column medium-centered">
 			<h1>LOG IN</h1>
-			<form >
-				
+			<form >				
 				<div class="row">
 					<div class="medium-12 columns">
 						<label>
