Partially fixed routing issues

--- a/public/app/common/header.html
+++ b/public/app/common/header.html
@@ -14,8 +14,8 @@
 				<li ng-class="{'active':activeNav=='home'}">
 					<a ui-sref="home">Home</a>
 				</li>
-				<li ng-class="{'active':activeNav=='blog'}">
-					<a ui-sref="blog">Blog</a>
+				<li ng-class="{'active':activeNav=='posts'}">
+					<a ui-sref="posts">Blog</a>
 				</li>
 				<li><a ui-sref="portfolio">Porfoilio</a></li>
 				<li><a ui-sref="about-me">About Me</a></li>
